# py-statmatch

./: .buildinfo  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  api-reference.html  changelog.yaml  changelog_entry.yaml  example.py  genindex.html  getting-started.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: code_changes.yaml  pr_changelog.yaml  pr_code_changes.yaml  publish-manual.yaml  reusable_changelog_check.yaml  reusable_lint.yaml  reusable_test.yaml  validate_changelog.py  versioning.yaml
_modules/: index.html
_modules/statmatch/: nnd_hotdeck.html
_sources/: index.md
docs/: _config.yml  _toc.yml  api-reference.md  changelog.md  contributing.md  getting-started.md  methodology.md  myst.yml
docs/_static/: custom.css
docs/examples/: basic-matching.ipynb  index.md
examples/: basic-matching.html  index.html
scripts/: publish_to_pypi.py
statmatch/: __init__.py  bayesian_matching.py  comparison.py  create_fused.py  diagnostics.py  distances.py  embedding_distance.py  frechet.py  mi_matching.py  mixed_mtc.py  nnd_hotdeck.py  ot_matching.py  plotting.py  propensity_matching.py  rand_hotdeck.py  rank_hotdeck.py  sample_utils.py  survey_utils.py
tests/: test_bayesian_matching.py  test_comparison.py  test_create_fused.py  test_diagnostics.py  test_distances.py  test_embedding_distance.py  test_frechet.py  test_mi_matching.py  test_mixed_mtc.py  test_nnd_hotdeck.py  test_ot_matching.py  test_plotting.py  test_propensity_matching.py  test_rand_hotdeck.py  test_rank_hotdeck.py  test_sample_utils.py  test_survey_utils.py
website/: index.html  package.json
website/src/: App.css  App.tsx  index.css
