[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-statmatch"
version = "0.1.0"
description = "Python implementation of R's StatMatch package for statistical matching and data fusion"
readme = "README.md"
authors = [
    { name = "PolicyEngine Contributors", email = "hello@policyengine.org" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "rpy2>=3.5.0",  # Only for testing against R implementation
]

[project.urls]
"Homepage" = "https://github.com/PolicyEngine/py-statmatch"
"Bug Tracker" = "https://github.com/PolicyEngine/py-statmatch/issues"

[tool.setuptools]
packages = ["statmatch"]

[tool.black]
line-length = 79
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 79