[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-statmatch"
version = "0.2.0"
description = "Python implementation of R's StatMatch package for statistical matching and data fusion"
authors = [
    {name = "PolicyEngine", email = "hello@policyengine.org"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["statistical matching", "data fusion", "hot deck imputation", "nearest neighbor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "rpy2>=3.5.0",  # For testing against R implementation
    "jupyter-book>=2.0.0",
    "yaml-changelog>=0.1.7",
    "build>=0.10.0",
    "setuptools>=61.0",
    "wheel>=0.38.0",
    "codecov>=2.1.0",
]
documentation = [
    "jupyter-book>=2.0.0",
    "sphinx>=7.0.0",
    "sphinx-book-theme>=1.0.0",
    "myst-nb>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/PolicyEngine/py-statmatch"
"Bug Tracker" = "https://github.com/PolicyEngine/py-statmatch/issues"
"Source Code" = "https://github.com/PolicyEngine/py-statmatch"

[tool.black]
line-length = 79
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"